; ModuleID = '/home/carl/AnghaBench/darwin-xnu/libkern/os/extr_internal.c__os_trace_addr_in_text_segment.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/libkern/os/extr_internal.c__os_trace_addr_in_text_segment.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mach_header = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @_os_trace_addr_in_text_segment(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.mach_header*, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = bitcast i8* %7 to %struct.mach_header*
  store %struct.mach_header* %8, %struct.mach_header** %5, align 8
  store i32 0, i32* %6, align 4
  %9 = load %struct.mach_header*, %struct.mach_header** %5, align 8
  %10 = getelementptr inbounds %struct.mach_header, %struct.mach_header* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  switch i32 %11, label %20 [
    i32 129, label %12
    i32 128, label %16
  ]

12:                                               ; preds = %2
  %13 = load i8*, i8** %3, align 8
  %14 = load i8*, i8** %4, align 8
  %15 = call i32 @_os_trace_addr_in_text_segment_32(i8* %13, i8* %14)
  store i32 %15, i32* %6, align 4
  br label %21

16:                                               ; preds = %2
  %17 = load i8*, i8** %3, align 8
  %18 = load i8*, i8** %4, align 8
  %19 = call i32 @_os_trace_addr_in_text_segment_64(i8* %17, i8* %18)
  store i32 %19, i32* %6, align 4
  br label %21

20:                                               ; preds = %2
  store i32 0, i32* %6, align 4
  br label %21

21:                                               ; preds = %20, %16, %12
  %22 = load i32, i32* %6, align 4
  ret i32 %22
}

declare dso_local i32 @_os_trace_addr_in_text_segment_32(i8*, i8*) #1

declare dso_local i32 @_os_trace_addr_in_text_segment_64(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
